# Scrape_GoogleScholar

./: README.md  pyproject.toml  test.ipynb
data/2025-06-01/: article_citations.json  metrics_and_articles.json
data/2025-06-01/content/: first_page_content.md  full_page_content.md
data/2025-06-01/content/new_articles/: 1.json  1.md  2.json  2.md  3.md
data/2025-06-06/: article_citations.json  metrics_and_articles.json
data/2025-06-06/content/: first_page_content.md  full_page_content.md
data/2025-06-18/: article_citations.json  metrics_and_articles.json
data/2025-06-18/content/: first_page_content.md  full_page_content.md
data/2025-06-18/content/new_articles/: 1.md
data/2025-07-20/: article_citations.json  metrics_and_articles.json
data/2025-07-20/content/: first_page_content.md  full_page_content.md
data/2025-07-20/content/new_articles/: 2.json  2.md
data/2025-09-20/: article_citations.json  metrics_and_articles.json
data/2025-09-20/content/: first_page_content.md  full_page_content.md
data/2025-09-20/content/new_articles/: 1.json  1.md  2.md  3.json  3.md  4.json  4.md
data/research_json_archive/: 2025-05-16.json  2025-06-01.json  2025-06-06.json  2025-06-18.json  2025-07-20.json  2025-09-20.json
scrapescholar/: main.py
scrapescholar/src/: config.py  digest_all_pages.py  digest_article_page.py  digest_first_page.py  handle_new_articles.py  update_research_data.py
scrapescholar/src/prompts/: digest_all_pages_prompt.py  digest_article_page_prompt.py  digest_first_page_prompt.py
scrapescholar/src/tools/: scrape.py
